--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-brahma-landing",
-  "version": "0.0.0",
-  "description": "Yeoman generator",
+  "version": "0.1.0",
+  "description": "Yeoman generator of landing page-proof tool with Brahma.landing",
   "license": "MIT",
   "main": "app/index.js",
   "repository": "morulus/generator-brahma-landing",
